# vietnamnet-crawler

./: .gitignore  Makefile  README.md  elasticsearch.py  es_script.py  output.txt  pyproject.toml
.configs/: application.yaml  targets.yaml
src/: main.py
src/crawler/: crawler.py
vietnamnet_crawler/: main.py
vietnamnet_crawler/crawler/: crawler.py
