[tool.poetry]
name = "vietnamnet-crawler"
version = "0.1.0"
description = ""
authors = ["Kwang1402 <hongquang2k4@gmail.com>"]
readme = "README.md"
packages = [{include = "vietnamnet_crawler"}]

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.12.3"
lxml-html-clean = "^0.4.1"
pandas = "^2.2.3"

tex-corver-core = {git = "git@github.com:tex-corver/core.git"}
tex-corver-utils = {git = "git@github.com:tex-corver/utils.git"}
elasticsearch = "^8.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
